bpo-30773: Fix ag_running; prohibit running athrow/asend/aclose in parallel